chore(ci): Updated PRs to run dry-run releases

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,3 +19,8 @@ jobs:
           node-version: 20
       - run: npm run ci:all
       - run: npm run build:all
+
+      - run: rpm run release:dry-run
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VSCE_AZURE_CREDENTIAL: true
