--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm run ci:all
       - run: npm run build:all
 
-      - run: rpm run release:dry-run
+      - run: npm run release:dry-run
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VSCE_AZURE_CREDENTIAL: true
