chore(ci): Updated pipelines to catch more build breaks (#184)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,16 +9,6 @@ permissions:
   pull-requests: write
 
 jobs:
-  lint_pr_title:
-    name: Lint PR Title
-    runs-on: ubuntu-latest
-    steps:
-    - name: Conventional Commit In Pull Requests
-      uses: ytanikin/PRConventionalCommits@1.2.0
-      with:
-        task_types: '["feat","fix","docs","test","ci","refactor","perf","chore","revert","dependencies"]'
-        add_label: 'true'
-
   build_and_test:
     name: Build and Test
     runs-on: ubuntu-latest
@@ -29,3 +19,8 @@ jobs:
           node-version: 20
       - run: npm run ci:all
       - run: npm run build:all
+
+      - run: npm run release:dry-run
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VSCE_AZURE_CREDENTIAL: true
