Feat: Add a command and hot key to run /reload
- Adds a hot key ctrl+shift+r to run `/reload`
- Adds a command pallete command to run reload

--- a/package.json
+++ b/package.json
@@ -56,6 +56,16 @@
             {
                 "command": "minecraft-debugger.showMinecraftDiagnostics",
                 "title": "Minecraft Diagnostics: Show"
+            },
+            {
+                "command": "minecraft-debugger.minecraftReload",
+                "title": "Minecraft Diagnostics: Reload MC "
+            }
+        ],
+        "keybindings":[
+            {
+                "command": "minecraft-debugger.minecraftReload",
+                "key": "ctrl+shift+r"
             }
         ],
         "breakpoints": [
