Rename reload command

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
             },
             {
                 "command": "minecraft-debugger.minecraftReload",
-                "title": "Minecraft Diagnostics: Reload MC "
+                "title": "Minecraft Reload"
             }
         ],
         "keybindings":[
