feat(diagnostics):  Add a reload command and support command keybinds (#245)
## Summary
- Adds a vscode command to reload in the command pallete `>Minecraft
Diagnostics: Reload MC`
- Added a keyboard shortcut for this `ctrl+shift+r` this can be edited
by the user in keyboard shortcuts
- Added a vscode command which allows users to add custom keyboard
shortcuts to run commands from `keybindings.json`
- Example `{ "key": "ctrl+shift+t", "command":
"minecraft-debugger.runMinecraftCommand", "args": "say hello" },`
- Added an error message if you have an active debug session but try and
run an empty command from within the home view

## To test:
- Launch a debug session of the extension
**Reload**
- Try and run the reload command without a session active an observe the
warning message
- Start a debugging session
- Run the reload command from the command pallete, confirm it reloads in
game
- Run the reload command from hot keys `ctrl+shift+r`, confirm it
reloads in game
**Command Keybinds**
- Open the `keybindings.json` (stored in
Roaming/Code/User/keybindings.json) or command pallete `>Preferences:
Open Keyboard Shortcuts (JSON)`
- Add a keybinding such as:
- ```[{ "key": "ctrl+shift+t", "command":
"minecraft-debugger.runMinecraftCommand", "args": "say hello" }]```
- Save and use the keybind
- Confirm Scripting says hello

--- a/package.json
+++ b/package.json
@@ -56,6 +56,17 @@
             {
                 "command": "minecraft-debugger.showMinecraftDiagnostics",
                 "title": "Minecraft Diagnostics: Show"
+            },
+            {
+                "command": "minecraft-debugger.minecraftReload",
+                "title": "Minecraft Reload"
+            }
+        ],
+        "keybindings":[
+            {
+                "command": "minecraft-debugger.minecraftReload",
+                "key": "ctrl+shift+r",
+                "when": "inDebugMode && editorLangId == typescript || inDebugMode && editorLangId == javascript"
             }
         ],
         "breakpoints": [
